# capnpc-embedded-rust

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md  SPIKE-RESULTS.md  THIRD-PARTY-NOTICES.md  build.rs
.github/: dependabot.yml
.github/workflows/: capnp-release-watch.yml  ci.yml  release.yml  test.yml
capnpc-embedded/: Cargo.toml  LICENSE  README.md  build.rs
capnpc-embedded/assets/: capnp.wasm
capnpc-embedded/ci/: build-wasm.sh
capnpc-embedded/patches/: wasi-1.4.0.patch
capnpc-embedded/src/: lib.rs  runner.rs
capnpc-embedded/tests/: compile.rs
capnpc-embedded/tests/schema/: shapes.capnp  types.capnp
ci/: build-wasm.sh
docs/: architecture.md
examples/consumer/: Cargo.toml  build.rs
examples/consumer/schema/: addressbook.capnp
examples/consumer/src/: main.rs
src/: lib.rs  runner.rs
tests/: compile.rs
tests/schema/: point.capnp
